--- a/.github/workflows/brfi.yml
+++ b/.github/workflows/brfi.yml
@@ -1,34 +1,48 @@
-name: amazonRDP
-
+name: RUN_BRF
 on: workflow_dispatch
-
 jobs:
   build:
-
     runs-on: windows-latest
     timeout-minutes: 9999
 
     steps:
-    - name: Downloading Ngrok.
+
+
+    - name: Download NGROK - NSSM.
       run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/start.bat -OutFile start.bat
-    - name: Extracting Ngrok Files.
-      run: Expand-Archive ngrok.zip
-    - name: Connecting to your Ngrok account.
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+        Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/nssm.exe -OutFile nssm.exe
+        
+    - name: Copy NGROK - NSSM to System32.
+      run: | 
+        copy nssm.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
+        
+    - name: Connect to NGROK account use NGROK_AUTH_TOKEN.
+      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Activating RDP access.
+        
+    - name: Download BATCH NGROK_AP - NGROK_CHECK - NGROK_LOOP.
+      run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_AP.bat -OutFile NGROK_AP.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_CHECK.bat -OutFile NGROK_CHECK.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/cudsav/WindowsRDP/main/Files/NGROK_LOOP.bat -OutFile NGROK_LOOP.bat
+        
+    - name: Create a NGROK .yml file.
+      run: start NGROK_AP.bat
+      
+    - name: Turn on RDP connection.
       run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - name: Creating Tunnel.
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
-    - name: Connecting to your RDP.
-      run: cmd /c start.bat
-    - name: RDP is ready!
-      run: | 
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/loop.ps1 -OutFile loop.ps1
-        ./loop.ps1
+        
+    - name: Create NGROK connection.
+      run: sc start ngrok
+      
+    - name: Run connection.
+      run: cmd /c NGROK_CHECK.bat
+      
+    - name: Success! You can run VPS use this informations.
+      run: cmd /c NGROK_LOOP.bat
